# orb-core

./: .dockerignore  .envrc.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  README_DEBUG_REPORT.md  SECURITY.md  build.rs  deny.toml  flake.nix
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  postCreateCommand.sh  postCreateCommand.user.sh.example  run.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  devcontainer-ci.yml  relyance-sci.yml
agentwire/: Cargo.toml
agentwire/macros/: Cargo.toml
ai-interface/: Cargo.toml
ai-interface/src/: lib.rs
alsa-sys/: Cargo.toml  README.md  build.rs
alsa-sys/src/: lib.rs
camera/: Cargo.toml
camera/src/: buffer.rs  device.rs  lib.rs  wait.rs
can/: Cargo.toml
can/src/: fd.rs  isotp.rs  lib.rs
docker/: Dockerfile  build.sh  run.sh
fraud-engine/: Cargo.toml
fraud-engine/src/: dsl.rs  lib.rs  pipeline.rs  report.rs
gimbal_documentation/: gimbal_calculations.md  mirror_calculations_plot.py
gimbal_documentation/GeoGebra_drawings/: camera_gimbal_construction_phi.ggb  camera_gimbal_construction_theta.ggb  eye_camera_system.ggb  rgb_camera_image.ggb  rgb_camera_image_fisheye_corrected.ggb
ir-net/: Cargo.toml
ir-net/src/: lib.rs
livestream-client/: Cargo.toml
livestream-client/src/: app.rs  cli.rs  downstream.rs  main.rs  upstream.rs
livestream-event/: Cargo.toml
livestream-event/src/: lib.rs
macros/: Cargo.toml
macros/src/: broker.rs  lib.rs
nix/: cargo.nix  ci.sh  cross.sh  dev-release.sh  native.sh  opencv.nix  python.nix  release.sh
nix/cargo/: default.nix
nix/cargo/normalize-manifest/: Cargo.toml
nix/cargo/normalize-manifest/src/: main.rs
nix/overlays/: nixpkgs-24_05.nix
orb-backend-connect/: Cargo.toml
orb-backend-connect/src/: main.rs
orb-id/: Cargo.toml
orb-id/src/: main.rs
orb-relay-client/: Cargo.toml
python-agent-interface/: Cargo.toml
python-agent-interface/src/: lib.rs
rgb-net/: Cargo.toml
rgb-net/src/: lib.rs
royale/: Cargo.toml
royale-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.hpp
royale/src/: camera.rs  error.rs  frame.rs  lib.rs
scripts/: dev-start-bin.sh  get-coverage.sh  git-config-token.sh
seekcamera/: Cargo.toml
seekcamera-sys/: Cargo.toml  build.rs
seekcamera-sys/src/: lib.rs
seekcamera/src/: camera.rs  error.rs  frame.rs  lib.rs
sound/: Cargo.toml
sound/examples/: queue.rs
sound/src/: device.rs  hw_params.rs  lib.rs  queue.rs
src/: calibration.rs  cli.rs  config.rs  consts.rs  dbus.rs  debug_report.rs  fisheye.rs  identification.rs  lib.rs  logger.rs  port.rs  process.rs  secure_element.rs  serializable_instant.rs  short_lived_token.rs  sound.rs  ssd.rs  time_series.rs  timestamped.rs  versions_json.rs
src/agents/: data_uploader.rs  distance.rs  eye_pid_controller.rs  eye_tracker.rs  image_notary.rs  image_uploader.rs  internal_temperature.rs  ir_auto_exposure.rs  ir_auto_focus.rs  mirror.rs  mod.rs  qr_code.rs  thermal.rs
src/agents/camera/: depth.rs  ir.rs  mod.rs  thermal.rs
src/agents/camera/rgb/: mod.rs  worker.rs
src/agents/livestream/: app.rs  downstream.rs  gpu.rs  mod.rs  upstream.rs
src/agents/python/: ir_net.rs  mega_agent_one.rs  mega_agent_two.rs  mod.rs  occlusion.rs  rgb_net.rs
src/agents/python/face_identifier/: mod.rs  types.rs
src/agents/python/iris/: extracts.rs  mod.rs  types.rs
src/backend/: config.rs  endpoints.rs  mod.rs  operator_status.rs  orb_os_status.rs  presigned_url.rs  s3_region.rs  signup_poll.rs  signup_post.rs  status.rs  upload_debug_report.rs  upload_image.rs  upload_personal_custody_package.rs  upload_self_custody_images.rs  user_status.rs
src/brokers/: mod.rs  observer.rs  orb.rs
src/dsp/: lagging.rs  mod.rs
src/ext/: broadcast.rs  mod.rs  mpsc.rs  stream.rs
src/image/: mod.rs
src/led/: mod.rs
src/led/center/: alert.rs  static.rs  wave.rs
src/led/operator/: bar.rs  battery.rs  blink.rs  connection.rs  mod.rs  pulse.rs  signup_phase.rs
src/led/ring/: alert.rs  arc_dash.rs  arc_pulse.rs  fake_progress.rs  idle.rs  mod.rs  progress.rs  segmented.rs  slider.rs  spinner.rs
src/mcu/: can.rs  main.rs  mod.rs  serial.rs
src/monitor/: cpu.rs  mod.rs  net.rs
src/network/: mecard.rs  mod.rs
src/pid/: integral.rs  timer.rs
src/plans/: detect_face.rs  enroll_user.rs  fraud_check.rs  idle.rs  integration_testing.rs  mod.rs  personal_custody_package.rs  upload_self_custody_images.rs  warmup.rs
src/plans/biometric_capture/: focus_sweep.rs  mirror_sweep.rs  mod.rs  multi_wavelength.rs  overcapture.rs  pupil_contraction.rs
src/plans/biometric_pipeline/: code.rs  mod.rs
src/plans/health_check/: ir_camera_fps.rs  mod.rs
src/plans/qr_scan/: mod.rs  operator.rs  user.rs  wifi.rs
src/plans/wifi/: mod.rs
src/priv/: README.md
src/ui/: mod.rs
src/utils/: mod.rs  rkyv_ndarray.rs  serialize_with_sorted_keys.rs
tests/: eye_pid_controller.rs  ir_auto_exposure.rs  ir_auto_focus.rs  pid.rs  qr_scan.rs
tests/common/: mod.rs
tests/eye_pid_controller/: pid.gnuplot
tests/ir_auto_exposure/: pid.gnuplot
tests/ir_auto_focus/: derived_1.gnuplot  derived_2.gnuplot  derived_3.gnuplot  derived_4.gnuplot  pid.gnuplot  sample_1  sample_2  sample_3  sample_4
tests/pid/: pid.gnuplot
tmp-tracing/: Cargo.toml
tmp-tracing/src/: lib.rs
uart/: Cargo.toml
uart/src/: device.rs  lib.rs
v4l2-sys/: Cargo.toml  README.md  build.rs  wrapper.h
wld-data-id/: Cargo.toml  README.md
wld-data-id/src/: lib.rs  s3_region.rs  wld_data_id.rs
wpa-supplicant-interface/: Cargo.toml
wpa-supplicant-interface/src/: join.rs  main.rs  reconfigure.rs  signal.rs  status.rs
