[workspace]
resolver = "2"
members = [
    "python-agent-interface",
    "alsa-sys",
    "camera",
    "can",
    "ir-net",
    "macros",
    "orb-id",
    "rgb-net",
    "seekcamera-sys",
    "seekcamera",
    "sound",
    "tmp-tracing",
    "uart",
    "v4l2-sys",
    "wld-data-id",
    "wpa-supplicant-interface",
]

[workspace.package]
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-core"
rust-version = "1.75.0"

[workspace.dependencies]
bindgen = "0.66.1"
color-eyre = "0.6"
eyre = "0.6"
log = "0.4"
ndarray = { version = "0.15.3", features = ["serde"] }
numpy = "0.19"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
rkyv = "0.7.40"
rusty-fork = "0.3"
schemars = "0.8.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tempfile = "3"
thiserror = "1"
tracing = { package = "tmp-tracing", path = "tmp-tracing" } # Temorary fake alias until we fully migrate

[workspace.dependencies.orb-messages]
git = "https://github.com/worldcoin/orb-messages"
rev = "6a2b74da2f390dd927d5172de4cb72a3928814e6"

[workspace.dependencies.orb-qr-link]
git = "https://github.com/worldcoin/orb-software"
rev = "05cd57bb16b1635bbb1fa7bb0b5319ad095f647d"
default-features = false
features = ["decode"]

[workspace.dependencies.orb-endpoints]
git = "https://github.com/worldcoin/orb-software"
rev = "05cd57bb16b1635bbb1fa7bb0b5319ad095f647d"

[package]
name = "orb"
version = "0.0.0"
authors = [
    "Saturnin Pugnet",
    "Valentine Valyaeff <valentine.valyaeff@gmail.com>",
]
description = """
The rust main program running on the orb and responsible for signup and other
main behaviors of the orb.
"""
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["stage"]
cuda-test = []
no-image-encryption = []
log-iris-data = []               # Allows logging of iris codes and mask codes
stage = ["dep:local-ip-address"] # Use staging backend
ui-test = []                     # overwritten random backend responses to generate successful signups and test UI

[dependencies.python-agent-interface]
path = "python-agent-interface"
version = "0.1.0"

[dependencies.orb-macros]
path = "macros"
version = "0.1.0"

[dependencies.orb-camera]
path = "camera"
version = "0.1.0"

[dependencies.orb-seekcamera]
path = "seekcamera"

[dependencies.orb-sound]
path = "sound"
version = "0.1.0"

[dependencies.orb-can]
path = "can"
version = "0.1.0"

[dependencies.orb-uart]
path = "uart"
version = "0.1.0"

[dependencies.orb-rgb-net]
path = "rgb-net"
version = "0.1.0"

[dependencies.orb-ir-net]
path = "ir-net"
version = "0.1.0"

[dependencies.orb-wld-data-id]
path = "wld-data-id"
version = "0.1.0"

[dependencies.v4l2-sys]
path = "v4l2-sys"
version = "0.1.0"

[dependencies.opencv]
git = "https://github.com/twistedfall/opencv-rust"
tag = "v0.82.0"
default-features = false
features = ["clang-runtime", "calib3d", "imgproc", "objdetect"]

[dependencies]
async-trait = "0.1"
bytesize = { version = "1.2.0", features = ["serde"] }
clap = { version = "3.2.23", features = ["derive"] }
close_fds = "0.3.2"
color-eyre.workspace = true
const_format = "0.2.30"
dashmap = "5.3.4"
data-encoding = "2.3"
derivative = "2"
dogstatsd = "0.7.1"
egui = "0.19.0"
egui-wgpu = "0.19.0"
eyre.workspace = true
flate2 = "1.0.20"
flexi_logger = { version = "0.25.1", features = ["compress"] }
fs_extra = "1.3.0"
futures = "0.3"
gstreamer = "0.20.0"
gstreamer-app = "0.20.0"
gstreamer-video = "0.20.1"
hex-literal = "0.3.4"
hex = "0.4"
lazy_static = "1"
libc = "0.2.93"
local-ip-address = { version = "0.5.1", optional = true }
mockall = "0.11.3"
ndarray.workspace = true
nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "mman", "sched"] }
nmea-parser = "0.10.0"
nom = "7.1.1"
numpy.workspace = true
once_cell = "1.12.0"
openssl = "0.10.55"
ordered-float = "3.4.0"
pnet = { version = "0.34.0", features = ["std"] }
png = "0.16.8"
prost = "0.12.3"
pyo3.workspace = true
rand = "0.8.4"
rand_distr = "0.4.2"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["multipart", "json", "gzip"] }
ring = "0.16"
rkyv.workspace = true
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
shell-words = "1.1.0"
sodiumoxide = "0.2.7"
tar = "0.4.40"
termion = "2.0.1"
thiserror.workspace = true
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["sync", "fs"] }
tracing.workspace = true
walkdir = "2.3.2"
zbus = { version = "3.10.0", default-features = false, features = ["tokio"] }
zmq = "0.10.0"
orb-messages.workspace = true
orb-endpoints.workspace = true
orb-qr-link.workspace = true

# `opencv` transitive dependencies.
# We don't use these in orb-core, but because of strange `opencv` build script,
# we need to lock its dependencies.
csv = "1.2.1"
digest = "0.10.6"
matches = "0.1"
rgb = "0.8.20"
schemars.workspace = true
sha2 = "0.10.6"
rs_merkle = "1.4.1"
rxing = "0.4.11"
image = "0.24.7"

[dev-dependencies]
approx = "0.5.0"
mock_instant = "0.2"

[build-dependencies]
color-eyre.workspace = true
prost-build = "0.12.3"

[profile.dev-release]
inherits = "release"
overflow-checks = true
debug-assertions = true
