[package]
name = "orb-camera"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2021"
license.workspace = true

[dependencies.v4l2-sys]
path = "../v4l2-sys"
version = "0.1.0"

[dependencies]
libc = "0.2.93"
nix = { version = "0.26", default-features = false, features = ["time"] }
log.workspace = true

[dev-dependencies]
futures = "0.3"
