[package]
name = "orb-ir-net"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition.workspace = true
license.workspace = true
publish = false

[features]
cuda-test = []

[dependencies]
eyre.workspace = true
ndarray.workspace = true
numpy.workspace = true
pyo3.workspace = true

[dependencies.ai-interface]
path = "../ai-interface"

[dev-dependencies]
approx = "0.5.0"
png = "0.16.8"
