[package]
name = "livestream-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]

[dependencies.livestream-event]
path = "../livestream-event"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
eframe.workspace = true
egui.workspace = true
eyre.workspace = true
gstreamer-app.workspace = true
gstreamer.workspace = true
rkyv.workspace = true
tokio.workspace = true
