[package]
name = "orb-backend-connect"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
v2_x_x = ["orb/v2_x_x"]
stage = ["orb/stage"]

[dependencies]
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

[dependencies.orb]
path = ".."
default-features = false
