[package]
name = "python-agent-interface"
version = "0.1.0"
authors = ["Anastasios Andronidis <anastasios.andronidis@toolsforhumanity.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pyo3.workspace = true
rkyv.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
