[package]
name = "orb-wld-data-id"
version = "0.1.0"
authors = ["Dan Girshovich"]
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bincode = "1.3.3"
eyre.workspace = true
rand = "0.8.3"
schemars = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
uuid = "1"
